2009-08-17  Michael Eager <eager@eagercon.com>

	* configure.ac, configure: Add MicroBlaze target.
	* rtl.h [MICROBLAZE]: Define VAR_SECTION, SHIFT_TYPE macros.
	* doc/invoke.texi: Describe MicroBlaze options.
	* testsuite/gcc.target/microblaze: NEW: Add MicroBlaze test cases.
	* config/microblaze: New architecture.
	* config/microblaze/{predicates.md,microblaze.md,microblaze.opt,
	t-microblaze,linux.h,microblaze-protos.h,microblaze.c}: NEW Target 
	support for MicroBlaze architecture.  
	* config/microblaze/{divsi3.asm,divsi3_table.c,mulsi3.asm,
	stack_overflow_exit.asm,umodsi3.asm,crti.s,udivsi3.asm,crtn.s,
	muldi3_hard.asm,modsi3.asm}: NEW MicroBlaze target routines.  

2007-02-13  Release Manager

	* GCC 4.1.2 released.

2007-02-06  Mark Mitchell  <mark@codesourcery.com>

	PR target/29487
	* tree.h (DECL_REPLACEABLE_P): New macro.
	* except.c (set_nothrow_function_flags): Likewise.

2007-02-06  Rask Ingemann Lamberisen  <rask@sygehus.dk>

	PR 30370 
	* config/rs6000/t-ppccomm: Correct Makefile typo.

2007-01-29  Josh Conner  <jconner@apple.com>

        PR middle-end/29683
        * calls.c (compute_argument_addresses): Set stack and stack_slot
        for partial args, too.
        (store_one_arg): Use locate.size.constant for the size when
        generating a save_area.

2007-01-28  Ralf Wildenhalf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/sourcebuild.texi: Add comma for clarity.
	* doc/extend.texi: Fix some typos.
	* doc/passes.texi: Likewise.
	* doc/cppinternals.texi: Likewise.
	* doc/c-tree.texi: Likewise.
	* doc/tree-ssa.texi: Likewise.
	* doc/install.texi: Likewise.

2007-01-21  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/29329
	* combine.c (replaced_rhs_insn): Rename to i2mod.
	(replaced_rhs_value): Rename to i2mod_new_rhs.
	(i2mod_old_rhs): New global variable.
	(combine_instructions): Adjust for above change.  Save a copy of
	the old RHS into i2mod_old_rhs when the contents of a REG_EQUAL